--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
              @apply h-64 md:h-80 overflow-y-auto mb-4 p-3 bg-slate-900/50 rounded-md border border-slate-700 space-y-2;
         }
         .chat-message {
-             @apply text-sm break-words; /* Allow long words to wrap */
+             @apply text-sm break-words;
         }
         .chat-message .username {
              @apply font-semibold text-orange-400 mr-2;
         }
          .chat-message .timestamp {
-             @apply text-xs text-gray-500 ml-2 whitespace-nowrap; /* Prevent timestamp wrap */
+             @apply text-xs text-gray-500 ml-2 whitespace-nowrap;
          }
          #chat-input-form {
              @apply flex space-x-2;
@@ -632,7 +632,7 @@
 
         async function checkLoginStatus() {
              try {
-                 const response = await fetch(`${API_BASE_URL}/api/user`);
+                 const response = await fetch(`${API_BASE_URL}/api/user`, {credentials: 'include'});
                  if (!response.ok) {
                      if (response.status === 401 || response.status === 403) {
                          currentUser = { logged_in: false };
@@ -649,17 +649,14 @@
              } finally {
                  const currentPage = localStorage.getItem('currentPage');
                  hideAllSections();
-                 if (currentUser.logged_in && currentPage === 'dashboard') {
+                 if (currentUser.logged_in) {
                      showDashboardInternal();
-                 } else if (currentPage === 'products') {
-                     showProductsPageInternal();
-                 } else if (currentUser.logged_in && currentPage === 'tickets') {
-                     showTicketsPageInternal();
-                 } else if (currentUser.logged_in && currentPage === 'ticketDetail') {
-                      showTicketsPageInternal();
-                 }
-                  else {
-                     showMainContentInternal();
+                 } else {
+                     if (currentPage === 'products') {
+                         showProductsPageInternal();
+                     } else {
+                         showMainContentInternal();
+                     }
                  }
                  updateHeaderUI(currentUser);
              }
@@ -676,7 +673,7 @@
             ticketListDiv.innerHTML = '';
 
             try {
-                const response = await fetch(`${API_BASE_URL}/api/tickets`);
+                const response = await fetch(`${API_BASE_URL}/api/tickets`, {credentials: 'include'});
                 if (!response.ok) {
                      if (response.status === 401 || response.status === 403) {
                          throw new Error("Not authorized to view tickets.");
@@ -717,14 +714,12 @@
 
         function appendChatMessage(data) {
              if (!chatMessagesDiv) return;
-             // Clear loading message if present
              const loadingMsg = chatMessagesDiv.querySelector('p.text-gray-500');
              if (loadingMsg) loadingMsg.remove();
 
              const messageElement = document.createElement('div');
              messageElement.classList.add('chat-message');
              const timestamp = data.timestamp ? new Date(data.timestamp).toLocaleTimeString() : '';
-             // Basic sanitation (replace potential HTML tags)
              const safeUsername = (data.username || 'System').replace(/</g, "&lt;").replace(/>/g, "&gt;");
              const safeText = (data.text || '').replace(/</g, "&lt;").replace(/>/g, "&gt;");
 
@@ -738,20 +733,19 @@
                 socket.emit('join_ticket_room', { ticket_id: ticketId });
                 return;
             }
-            if (socket) { // Clean up old listeners if socket exists but isn't connected
+            if (socket) {
                  socket.off('connect');
                  socket.off('disconnect');
                  socket.off('connect_error');
                  socket.off('new_message');
                  socket.off('room_joined');
-                 socket.off('past_messages'); // Add listener removal for past messages if used
-                 socket.off('error_message'); // Add listener removal for errors
+                 socket.off('past_messages');
+                 socket.off('error_message');
             }
 
             socket = io(SOCKET_URL, {
                 reconnectionAttempts: 3,
-                // Add withCredentials: true if using cookies for session auth across domains
-                // withCredentials: true,
+                withCredentials: true,
             });
 
             socket.on('connect', () => {
@@ -763,7 +757,7 @@
             socket.on('disconnect', (reason) => {
                 console.log('WebSocket disconnected:', reason);
                 appendChatMessage({text: `Disconnected: ${reason}`});
-                currentTicketId = null; // Clear ticket ID on disconnect
+                currentTicketId = null;
             });
 
             socket.on('connect_error', (error) => {
@@ -781,8 +775,6 @@
              socket.on('room_joined', (data) => {
                  console.log('Joined room:', data.room);
                  appendChatMessage({text: `Joined ticket room.`});
-                 // TODO: Fetch past messages for this ticket via API or socket event
-                 // fetchPastMessages(ticketId);
              });
 
              socket.on('error_message', (data) => {
@@ -801,8 +793,6 @@
         }
 
 
-        // --- Event Listeners ---
-
         loginButton.addEventListener('click', (e) => {
              e.preventDefault();
              window.location.href = loginButton.href;
@@ -811,7 +801,7 @@
         logoutButton.addEventListener('click', async () => {
             console.log('Logging out...');
             try {
-                 const response = await fetch(`${API_BASE_URL}/logout`);
+                 const response = await fetch(`${API_BASE_URL}/logout`, {credentials: 'include'});
                  if (!response.ok) { throw new Error('Logout request failed'); }
                  currentUser = { logged_in: false };
                  localStorage.removeItem('isLoggedIn');
@@ -917,6 +907,7 @@
                             'Content-Type': 'application/json',
                         },
                         body: JSON.stringify({ subject, message }),
+                        credentials: 'include'
                     });
 
                     if (!response.ok) {
