--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             </div>
             <div class="lg:col-span-1 ticket-card">
                  <h3 class="text-xl font-semibold text-white mb-4">Create New Ticket</h3>
-                 <form id="create-ticket-form">
+                 <form id="create-ticket-form" novalidate>
                      <div class="mb-4">
                          <label for="ticket-subject" class="block text-sm font-medium text-gray-300 mb-1">Subject</label>
                          <input type="text" id="ticket-subject" name="ticket-subject" required class="w-full bg-slate-700 border border-slate-600 rounded-md py-2 px-3 text-white focus:outline-none focus:ring-2 focus:ring-orange-500 focus:border-transparent placeholder-gray-500">
@@ -409,7 +409,7 @@
             <div id="chat-messages">
                 <p class="text-gray-500 text-center py-4">Loading chat...</p>
             </div>
-            <form id="chat-input-form" class="mt-4">
+            <form id="chat-input-form" class="mt-4" novalidate>
                  <input type="text" id="chat-input" placeholder="Type your message..." required class="w-full">
                  <button type="submit" id="send-chat-button">Send</button>
             </form>
@@ -892,12 +892,12 @@
 
         if(createTicketForm) {
             createTicketForm.addEventListener('submit', async (event) => {
-                event.preventDefault();
+                event.preventDefault(); // Prevent default browser validation/submission
                 const subject = ticketSubjectInput.value.trim();
                 const message = ticketMessageInput.value.trim();
                 if (!subject || !message) {
                      showMessage(errorMessage, 'Please fill out both subject and message.', true);
-                     return;
+                     return; // Stop if fields are empty
                 }
 
                 try {
@@ -919,7 +919,7 @@
                     console.log('Ticket created:', result);
                     showMessage(ticketMessage, 'Ticket submitted successfully!');
                     createTicketForm.reset();
-                    fetchTickets();
+                    fetchTickets(); // Refresh ticket list
 
                 } catch (error) {
                     console.error('Error creating ticket:', error);
@@ -930,7 +930,7 @@
 
         if(chatInputForm) {
              chatInputForm.addEventListener('submit', (event) => {
-                 event.preventDefault();
+                 event.preventDefault(); // Prevent default form submission
                  const messageText = chatInput.value.trim();
                  if (messageText && socket && socket.connected && currentTicketId) {
                      socket.emit('send_message', {
