--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shillette - Home</title>
+    <title>Shillette - Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,8 @@
             </a>
             <div class="flex items-center space-x-6">
                 <nav class="hidden md:flex space-x-6">
-                    <a href="index.html" class="text-white font-semibold transition duration-200">Home</a> <a href="products.html" class="text-gray-300 hover:text-white transition duration-200">Products</a>
+                    <a href="index.html" class="text-gray-300 hover:text-white transition duration-200">Home</a>
+                    <a href="products.html" class="text-gray-300 hover:text-white transition duration-200">Products</a>
                     <a href="tickets.html" class="text-gray-300 hover:text-white transition duration-200">Tickets</a>
                     <a href="https://discord.gg/shillette" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-200">Discord</a>
                 </nav>
@@ -40,11 +41,10 @@
                         <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19.54 6.04a13.27 13.27 0 00-2.66-1.89 12.4 12.4 0 00-1.6-1.3c-.4-.3-.82-.53-1.28-.71-.18-.07-.37-.13-.56-.19a.82.82 0 00-.5-.06 11.85 11.85 0 00-5.88 0 .82.82 0 00-.5.06c-.19.06-.38.12-.56.19-.46.18-.88.4-1.28.7a12.34 12.34 0 00-1.6 1.3A13.23 13.23 0 004.46 6.04 14.31 14.31 0 003 11.7c0 .1 0 .19.02.28a13.8 13.8 0 001.44 4.61c.56 1.1 1.24 2.1 2.04 3 .5.56 1.04 1.07 1.63 1.53.17.13.34.25.52.37a.8.8 0 00.57.19.78.78 0 00.57-.19 11.07 11.07 0 005.56 0 .78.78 0 00.57.19.8.8 0 00.57-.19c.18-.12.35-.24.52-.37a12.06 12.06 0 003.67-4.53 13.85 13.85 0 001.44-4.61c0-.1 0-.19.02-.28a14.31 14.31 0 00-1.46-5.66zm-4.61 7.03a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0zm-5.72 0a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0z"></path></svg>
                         <span>Login with Discord</span>
                     </a>
-                    <a href="dashboard.html" id="user-info" class="hidden items-center space-x-3 hover:bg-slate-700/50 p-1.5 rounded-lg transition duration-200 cursor-pointer">
+                    <div id="user-info" class="hidden items-center space-x-3 hover:bg-slate-700/50 p-1.5 rounded-lg transition duration-200">
                         <img id="user-avatar" src="https://placehold.co/32x32/7f8c8d/ecf0f1?text=?" alt="User Avatar" class="w-8 h-8 rounded-full border-2 border-slate-600" onerror="this.src='https://placehold.co/32x32/7f8c8d/ecf0f1?text=?'">
-                        <span id="user-name" class="text-white text-sm font-medium">Username</span>
-                        <button id="logout-button" type="button" class="text-gray-400 hover:text-white text-xs font-medium bg-slate-600 hover:bg-slate-500 px-2 py-1 rounded-md transition duration-200">Logout</button>
-                    </a>
+                        <span id="user-name" class="text-white font-semibold text-sm">Username</span> <button id="logout-button" type="button" class="text-gray-400 hover:text-white text-xs font-medium bg-slate-600 hover:bg-slate-500 px-2 py-1 rounded-md transition duration-200">Logout</button>
+                    </div>
                 </div>
             </div>
             <div class="md:hidden">
@@ -55,31 +55,47 @@
         </div>
     </header>
 
-    <main class="flex-grow">
-        <section class="relative text-center py-24 md:py-32 lg:py-40 overflow-hidden">
-            <div class="container mx-auto px-6 relative z-10">
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-white mb-4">Shillette</h1>
-                <p class="text-xl md:text-2xl text-orange-400 mb-6 font-medium">Advanced DMA Firmware</p>
-                <p class="max-w-2xl mx-auto text-gray-400 mb-10">
-                    Fully undetected DMA firmware, battle-tested for reliable performance. Join thousands of satisfied users.
-                </p>
-                <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4 mb-16">
-                    <a href="products.html" class="bg-orange-600 hover:bg-orange-700 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto">
-                        Purchase Product
-                    </a>
-                    <a href="https://discord.gg/shillette" target="_blank" rel="noopener noreferrer" class="bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto flex items-center justify-center space-x-2">
-                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19.54 6.04a13.27 13.27 0 00-2.66-1.89 12.4 12.4 0 00-1.6-1.3c-.4-.3-.82-.53-1.28-.71-.18-.07-.37-.13-.56-.19a.82.82 0 00-.5-.06 11.85 11.85 0 00-5.88 0 .82.82 0 00-.5.06c-.19.06-.38.12-.56.19-.46.18-.88.4-1.28.7a12.34 12.34 0 00-1.6 1.3A13.23 13.23 0 004.46 6.04 14.31 14.31 0 003 11.7c0 .1 0 .19.02.28a13.8 13.8 0 001.44 4.61c.56 1.1 1.24 2.1 2.04 3 .5.56 1.04 1.07 1.63 1.53.17.13.34.25.52.37a.8.8 0 00.57.19.78.78 0 00.57-.19 11.07 11.07 0 005.56 0 .78.78 0 00.57.19.8.8 0 00.57-.19c.18-.12.35-.24.52-.37a12.06 12.06 0 003.67-4.53 13.85 13.85 0 001.44-4.61c0-.1 0-.19.02-.28a14.31 14.31 0 00-1.46-5.66zm-4.61 7.03a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0zm-5.72 0a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0z"></path></svg>
-                        <span>Join Discord</span>
-                    </a>
+    <main class="content-section">
+        <h2 class="page-title">Dashboard</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            <div class="dashboard-card md:col-span-1 lg:col-span-1">
+                <h3>Welcome!</h3>
+                <div class="flex items-center space-x-4 mb-4">
+                     <img id="dashboard-user-avatar" src="https://placehold.co/64x64/7f8c8d/ecf0f1?text=?" alt="User Avatar" class="w-16 h-16 rounded-full border-2 border-orange-500" onerror="this.src='https://placehold.co/64x64/7f8c8d/ecf0f1?text=?'">
+                     <div>
+                         <p id="dashboard-user-name" class="text-xl font-semibold text-white">Username</p>
+                         <p id="dashboard-user-status" class="text-sm text-gray-400">Status: Loading...</p>
+                     </div>
                 </div>
-                <div class="grid grid-cols-2 sm:grid-cols-4 gap-8 max-w-3xl mx-auto text-gray-400">
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">1000+</div><div>Happy Users</div></div>
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">1000+</div><div>Products Sold</div></div>
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">5.0</div><div>Star Rating</div></div>
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">3+</div><div>Years Experience</div></div>
-                </div>
+                <button id="dashboard-logout-button" class="w-full bg-red-600 hover:bg-red-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-300">
+                    Logout
+                </button>
             </div>
-        </section>
+
+            <div class="dashboard-card md:col-span-1 lg:col-span-1">
+                <h3>My Products</h3>
+                <p class="text-gray-400">Product information will appear here...</p>
+            </div>
+
+            <div class="dashboard-card md:col-span-1 lg:col-span-1">
+                 <h3>Settings</h3>
+                 <p class="text-gray-400">User settings will appear here...</p>
+            </div>
+
+            <div id="dashboard-ticket-list-card" class="dashboard-card md:col-span-2 lg:col-span-2 hidden">
+                 <h3>My Support Tickets</h3>
+                 <div id="dashboard-ticket-list" class="dashboard-ticket-list">
+                     </div>
+                 <p id="dashboard-ticket-list-status" class="text-sm text-gray-500 mt-4">Loading tickets...</p>
+            </div>
+
+            <div id="dashboard-roles-card" class="dashboard-card md:col-span-1 lg:col-span-1 hidden">
+                 <h3>My Roles</h3>
+                 <div id="dashboard-roles-list" class="text-gray-400">
+                     <p>Loading roles...</p>
+                 </div>
+            </div>
+        </div>
     </main>
 
     <footer class="bg-black mt-auto py-6 border-t border-gray-800">
@@ -89,5 +105,6 @@
     </footer>
 
     <script src="script.js"></script>
+
 </body>
 </html>
