--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shillette - Home</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Shillette - Ticket Detail</title> <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body class="min-h-screen flex flex-col">
 
@@ -25,13 +25,14 @@
     <header class="py-4 sticky top-0 z-20 bg-gray-900/80 backdrop-blur-md border-b border-gray-700/50">
         <div class="container mx-auto px-6 flex justify-between items-center">
             <a href="index.html" class="flex items-center space-x-2">
-                <img src="images/icon.png" alt="Shillette Icon" class="w-8 h-8" onerror="this.style.display='none'; this.nextElementSibling.classList.remove('hidden');">
+                <img src="../images/icon.png" alt="Shillette Icon" class="w-8 h-8" onerror="this.style.display='none'; this.nextElementSibling.classList.remove('hidden');">
                 <span class="text-2xl font-bold text-white hidden">Shillette</span>
                 <span class="text-2xl font-bold text-white">Shillette</span>
             </a>
             <div class="flex items-center space-x-6">
                 <nav class="hidden md:flex space-x-6">
-                    <a href="index.html" class="text-white font-semibold transition duration-200">Home</a> <a href="products.html" class="text-gray-300 hover:text-white transition duration-200">Products</a>
+                    <a href="index.html" class="text-gray-300 hover:text-white transition duration-200">Home</a>
+                    <a href="products.html" class="text-gray-300 hover:text-white transition duration-200">Products</a>
                     <a href="tickets.html" class="text-gray-300 hover:text-white transition duration-200">Tickets</a>
                     <a href="https://discord.gg/shillette" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-200">Discord</a>
                 </nav>
@@ -55,31 +56,21 @@
         </div>
     </header>
 
-    <main class="flex-grow">
-        <section class="relative text-center py-24 md:py-32 lg:py-40 overflow-hidden">
-            <div class="container mx-auto px-6 relative z-10">
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-white mb-4">Shillette</h1>
-                <p class="text-xl md:text-2xl text-orange-400 mb-6 font-medium">Advanced DMA Firmware</p>
-                <p class="max-w-2xl mx-auto text-gray-400 mb-10">
-                    Fully undetected DMA firmware, battle-tested for reliable performance. Join thousands of satisfied users.
-                </p>
-                <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4 mb-16">
-                    <a href="products.html" class="bg-orange-600 hover:bg-orange-700 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto">
-                        Purchase Product
-                    </a>
-                    <a href="https://discord.gg/shillette" target="_blank" rel="noopener noreferrer" class="bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto flex items-center justify-center space-x-2">
-                        <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19.54 6.04a13.27 13.27 0 00-2.66-1.89 12.4 12.4 0 00-1.6-1.3c-.4-.3-.82-.53-1.28-.71-.18-.07-.37-.13-.56-.19a.82.82 0 00-.5-.06 11.85 11.85 0 00-5.88 0 .82.82 0 00-.5.06c-.19.06-.38.12-.56.19-.46.18-.88.4-1.28.7a12.34 12.34 0 00-1.6 1.3A13.23 13.23 0 004.46 6.04 14.31 14.31 0 003 11.7c0 .1 0 .19.02.28a13.8 13.8 0 001.44 4.61c.56 1.1 1.24 2.1 2.04 3 .5.56 1.04 1.07 1.63 1.53.17.13.34.25.52.37a.8.8 0 00.57.19.78.78 0 00.57-.19 11.07 11.07 0 005.56 0 .78.78 0 00.57.19.8.8 0 00.57-.19c.18-.12.35-.24.52-.37a12.06 12.06 0 003.67-4.53 13.85 13.85 0 001.44-4.61c0-.1 0-.19.02-.28a14.31 14.31 0 00-1.46-5.66zm-4.61 7.03a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0zm-5.72 0a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0z"></path></svg>
-                        <span>Join Discord</span>
-                    </a>
+    <main class="content-section">
+         <div class="flex justify-start mb-8">
+             <a href="tickets.html" id="back-to-tickets-button" class="text-orange-400 hover:text-orange-300 flex items-center space-x-2 transition duration-200">
+                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"></path></svg>
+                 <span>Back to Tickets</span>
+             </a>
+        </div>
+        <h2 id="ticket-detail-subject" class="page-title">Loading Ticket...</h2> <div class="ticket-card max-w-4xl mx-auto"> <div id="chat-messages">
+                <p class="text-gray-500 text-center py-4">Loading chat history...</p>
                 </div>
-                <div class="grid grid-cols-2 sm:grid-cols-4 gap-8 max-w-3xl mx-auto text-gray-400">
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">1000+</div><div>Happy Users</div></div>
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">1000+</div><div>Products Sold</div></div>
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">5.0</div><div>Star Rating</div></div>
-                    <div class="text-center"><div class="text-3xl font-bold text-white mb-1">3+</div><div>Years Experience</div></div>
-                </div>
-            </div>
-        </section>
+            <form id="chat-input-form" class="mt-4" novalidate>
+                 <input type="text" id="chat-input" placeholder="Type your message..." required class="w-full">
+                 <button type="submit" id="send-chat-button">Send</button>
+            </form>
+        </div>
     </main>
 
     <footer class="bg-black mt-auto py-6 border-t border-gray-800">
@@ -88,6 +79,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
+
 </body>
 </html>
